# FriendsService

./: .ruff.toml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  run.sh
.envs/: .env.template
friendsservice/: asgi.py  settings.py  urls.py  wsgi.py
friendsservice/api_v1/: apps.py  urls.py
friendsservice/api_v1/user/: handlers.py  serializers.py  urls.py  views.py
friendsservice/friendship/: apps.py  exceptions.py  models.py
friendsservice/friendship/migrations/: 0001_initial.py
friendsservice/friendship/services/: add_to_friends.py  change_status.py  check_status.py  delete_from_friends.py  get_friends_list.py  received_requests.py  sent_requests.py
friendsservice/friendship/tests/: base.py  test_add_to_friends.py
